[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/enemy/Base/Brain.gd" type="Script" id=1]
[ext_resource path="res://src/enemy/Base/EnemyBase.gd" type="Script" id=2]
[ext_resource path="res://src/enemy/Base/Sensors/Sensors.gd" type="Script" id=3]
[ext_resource path="res://src/effects/AlarmedEmote.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/enemy/Base/HealthManager.gd" type="Script" id=5]
[ext_resource path="res://src/enemy/Base/Sensors/CircularRaycastArray.gd" type="Script" id=6]
[ext_resource path="res://assets/Animations/EnemyTakeDamage.tres" type="Animation" id=7]
[ext_resource path="res://src/UI/Damage/FCTMgr.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/enemy/Base/SteeringAction.gd" type="Script" id=9]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 70.0

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform bool active = false;
uniform vec4 color = vec4(1, 1, 1, 1);

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 new_color = vec4(color.r, color.g, color.b, previous_color.a);
	if (active) {
		COLOR = new_color;
	} else {
		COLOR = previous_color
	}
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/active = false
shader_param/color = Plane( 1, 1, 1, 1 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.713768, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.710145, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 0 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 61.02
gravity = Vector3( 0, 20, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Character/CharacterBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character/CharacterBody:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.3 ), Vector2( 1, 1 ) ]
}

[node name="EnemyBase" type="RigidBody2D" groups=[
"enemies",
]]
collision_layer = 2
collision_mask = 134
mode = 2
physics_material_override = SubResource( 1 )
can_sleep = false
script = ExtResource( 2 )

[node name="Brain" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Sensors" type="Node2D" parent="Brain"]
position = Vector2( 0, 8 )
script = ExtResource( 3 )

[node name="Vision" type="Area2D" parent="Brain/Sensors"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brain/Sensors/Vision"]
visible = false
shape = SubResource( 2 )

[node name="AttackRadius" type="Area2D" parent="Brain/Sensors"]

[node name="CircularRaycasts" type="Node2D" parent="Brain/Sensors"]
script = ExtResource( 6 )

[node name="Actions" type="Node2D" parent="Brain"]

[node name="SteeringAction" type="Node2D" parent="Brain/Actions"]
script = ExtResource( 9 )

[node name="Character" type="Node2D" parent="."]

[node name="UnderCharacter" type="Node2D" parent="Character"]

[node name="AlarmedEmote" parent="Character/UnderCharacter" instance=ExtResource( 4 )]

[node name="CharacterBody" type="StaticBody2D" parent="Character" groups=[
"enemy_hitbox",
]]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 4 )
collision_layer = 16
collision_mask = 4

[node name="OnCharacter" type="Node2D" parent="Character"]

[node name="HealthManager" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ColorAnimationPlayer" type="AnimationPlayer" parent="HealthManager"]
anims/EnemyTakeDamage = ExtResource( 7 )

[node name="DamageParticles" type="Particles2D" parent="HealthManager"]
position = Vector2( 0, 4 )
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 7 )

[node name="DamageLabels" parent="HealthManager" instance=ExtResource( 8 )]
position = Vector2( 0, -8 )

[node name="QueueFreeTimer" type="Timer" parent="."]

[node name="SurpriseAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Surprise = SubResource( 8 )

[connection signal="alarmed_by" from="Brain/Sensors" to="." method="_on_Sensors_alarmed_by"]
[connection signal="body_entered" from="Brain/Sensors/Vision" to="Brain/Sensors" method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Brain/Sensors/Vision" to="Brain/Sensors" method="_on_Vision_body_exited"]
[connection signal="body_entered" from="Brain/Sensors/AttackRadius" to="Brain/Sensors" method="_on_AttackRadius_body_entered"]
[connection signal="body_exited" from="Brain/Sensors/AttackRadius" to="Brain/Sensors" method="_on_AttackRadius_body_exited"]
[connection signal="on_death" from="HealthManager" to="." method="_on_HealthManager_on_death"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_QueueFreeTimer_timeout"]
[connection signal="animation_finished" from="SurpriseAnimationPlayer" to="." method="_on_surprise_animation_finished"]
